--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ window.addEventListener('click', function() {
 
     <section class="photo">
         <img src="img/fotowisuda1.jpg" alt="Foto Wisudawan">
-        <h2>Firstama Yusuf Noor S.Tr.T</h2>
+        <h2>Firstama Yusuf Noor</h2>
         <!-- <p class="degree">Sarjana Teknik Otomasi</p> -->
     </section>
 
@@ -64,3 +64,4 @@ window.addEventListener('click', function() {
 <script src="script.js"></script>
 </body>
 </html>
+
